Add env for redis cloud

--- a/todo.txt
+++ b/todo.txt
@@ -17,3 +17,5 @@ Google translate API? If no, then google maps api on event list.
 Configure sendgrid
 
 Configure s3 for paperclip
+
+Figure out logging in by username OR email
