--- a/todo.txt
+++ b/todo.txt
@@ -10,12 +10,12 @@ Add chat capability with route that belongs to account (index accounts all? how 
 
 Styling of forms and other pages.
 
-google maps api on event list?
-
 Configure sendgrid
 
 Configure s3 for paperclip
 
 Figure out logging in by username OR email
 
-Compress images
+Add chat room and event association (one to one), with a button on the events page to create a chat room (only if the person(via account model) is attending(associated id) to that event(validate in controller of chat))
+
+Ask mike about admin redirect problem and capybara test
